test/TestPhases/typechecker/valid/const.blc
struct S
    let a: int32
    var b: float32
    var c: bool
end

struct T
    var ss: [2]S
end


const myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue = true
const myOooooooooooooooonlyOne: int8 = 1
const myTwof: float32 = 2.0
const SIZE: int8 = 3
const myS: S = {a = myOooooooooooooooonlyOne + 1, b = myTwof + 8.0, c = myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue}
const myA: [SIZE]int64 = {17, 17+myOooooooooooooooonlyOne}
const defaultT: T = {ss = {[1]=myS}}
const threeT: [SIZE]T = {[myOooooooooooooooonlyOne]=defaultT}


function f()()
    // use as plain rhs
    let foo = myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue
    let bar = myOooooooooooooooonlyOne
    let xyz = myTwof
    let fdsa = myS
    let qwertz = myA
    let someT = defaultT
    let t3T = threeT

    // access sub structure
    let second = defaultT.ss[1]
    let third = threeT[2]
end

function callMeF(a: bool, b: int64, c: float64, d: S, e: [SIZE]int64, f: T, g: [SIZE]T)()
    // local constants
    if a then
        const x = true
    end
end

activity callMeA(a: bool, b: int64, c: float64, d: S, e: [3]int64, f: T, g: [3]T)()
    // local constants
    if a then
        const x = true
    end
    await false
end

@[EntryPoint]
activity A ()()
    // use as plain rhs
    let foo = myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue
    let bar = myOooooooooooooooonlyOne
    let xyz = myTwof
    let fdsa = myS
    let qwertz = myA
    let someT = defaultT
    let t3T = threeT

    // access sub structure
    let second = defaultT.ss[1]
    let third = threeT[2]

    callMeF(myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue, myOooooooooooooooonlyOne, myTwof, myS, myA, defaultT, threeT)
    run callMeA(myVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryVeeeeeeeeeeeeryTrue, myOooooooooooooooonlyOne, myTwof, myS, myA, defaultT, threeT)

    await false
end